--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <script src="main.js"></script>
+    
     <main><!--
         <form action="">
             
@@ -23,12 +23,12 @@
 
     <section>
         <div class="contenedor">
-            <h1>Background Color: <span class="color">#F1F5F8</span></h1>
-            <button class="btn" id="btn" onclick="cambiaColor()">Change</button>
+            <h1>Background Color: <span id="colorname" class="color">#F1F5F8</span></h1>
+            <button class="btn" id="btn">Change</button>
         </div>
     </section>
 
     </main>
-
+<script src="main.js"></script>
 </body>    
 </html>
