--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Color Randomizer</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="color-wheel.png">
 </head>
 <body>
     
@@ -24,7 +25,7 @@
     <section>
         <div class="contenedor">
             <h1>Background Color: <span id="colorname" class="color">#F1F5F8</span></h1>
-            <button class="btn" id="btn">Change</button>
+            <button class="btn" id="btn">Randomize</button>
         </div>
     </section>
 
